updated code for GPU use

--- a/Retrieval_Augmented_Generation_(RAG).ipynb
+++ b/Retrieval_Augmented_Generation_(RAG).ipynb
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ChristianSantos2671/NLP-Week2-Text-Generation/blob/main/Retrieval_Augmented_Generation_(RAG).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/gist/ChristianSantos2671/0dd398602f5e7fa02478874094555208/retrieval_augmented_generation_-rag.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -135,7 +135,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install transformers sentence-transformers datasets pandas -q\n"
+        "!pip install transformers sentence-transformers datasets pandas -q"
       ]
     },
     {
@@ -165,7 +165,17 @@
     {
       "cell_type": "code",
       "source": [
-        "!hf auth login"
+        "#!hf auth login\n",
+        "\n",
+        "# Authentication with Hugging Face locally\n",
+        "from huggingface_hub import login\n",
+        "import os\n",
+        "\n",
+        "HF_TOKEN = \"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\"\n",
+        "login(token=HF_TOKEN)\n",
+        "\n",
+        "# Verify authentication\n",
+        "!hf auth whoami"
       ],
       "metadata": {
         "id": "hMY7Lwlwqqdr",
@@ -222,10 +232,10 @@
         "#llm = pipeline('text-generation', model='gpt2')  # A lightweight example for demonstration\n",
         "\n",
         "#tried using llama but ran out of VRAM\n",
-        "#llm = pipeline('text-generation', model='meta-llama/Llama-2-7b-hf')\n",
+        "llm = pipeline('text-generation', model='meta-llama/Llama-2-7b-hf')\n",
         "\n",
         "# flan-t5-large is small and follows instructions better than gpt2\n",
-        "llm = pipeline('text2text-generation', model='google/flan-t5-large')\n"
+        "#llm = pipeline('text2text-generation', model='google/flan-t5-large')"
       ],
       "metadata": {
         "id": "eQ0bq5nLDWMh"
@@ -322,7 +332,8 @@
         "\n",
         "# 1. Load the Reddit Finance dataset\n",
         "print(\"Loading dataset from Hugging Face...\")\n",
-        "ds = load_dataset(\"emilpartow/reddit_comments_sp500\")\n",
+        "#ds = load_dataset(\"emilpartow/reddit_comments_sp500\")\n",
+        "ds = load_dataset(\"emilpartow/reddit_finance_posts_sp500\")\n",
         "\n",
         "# 2. Convert to a Pandas DataFrame for easier handling\n",
         "df = ds['train'].to_pandas()\n",
@@ -339,7 +350,8 @@
         "# The title and comments combined will result in the most important parts of the post being embedded for use in the simillarity search.\n",
         "\n",
         "# 3. Create 'rag_content' by combining Title and Text\n",
-        "df['rag_content'] = \"Post Title: \" + df['post_title'] + \"\\nComment: \" + df['comment'].fillna(\"\")\n",
+        "#df['rag_content'] = \"Post Title: \" + df['post_title'] + \"\\nComment: \" + df['comment'].fillna(\"\")\n",
+        "df['rag_content'] = \"Post Title: \" + df['title'] + \"\\nComment: \" + df['text'].fillna(\"\")\n",
         "\n",
         "print(f\"Dataset loaded. Total rows: {len(df)}\")\n",
         "print(\"Sample content:\\n\", df['rag_content'].iloc[0][:200])\n"
